<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Tourist Guide</string>
    <string name="places_one_should_nvisit_in_mumbai">Places One Should\nVisit In Mumbai\n\n\n</string>
    <string name="places">Hot Spots</string>
    <string name="hidden">Local Areas</string>
    <string name="Hidden_spaces">Local Places\nOften Are Hidden\nBut We Got You\n\n</string>
    <string name="AAMACHImumbai">Activities And Events Occurring In\nAAAMCHI MUMBAI</string>
    <string name="footbal_link"><a href="">Tap To Know More</a></string>
    <string name="cricket_link"><a href="">Tap To Know More</a></string>
    <string name="Info_football">The All India Football Federation (AIFF), in August this year, put together a total of 10 webinars in order to explain the intricacies of the Golden Baby Leagues in different…</string>
    <string name="info_cricket">MUMBAI: The Mumbai Cricket Association on Monday announced that its newly formed Cricket Improvement Committe will conduct candidates for various position, including that of senior mens\'s…</string>
    <string name="info_hockey">The Bombay Provincial Hockey Association Ltd which was originally incorporated on 2nd October, 1934 in British / India people formed an Association. The Bombay Provincial Hockey Association…</string>
    <string name="hockey_link"><a href="">Tap To Know More</a></string>
    <string name="kabbadi_link"><a href="">Tap To Know More</a></string>
    <string name="info_kab">Indian national kabaddi team captain and vivo Pro Kabaddi star Deepak Niwas Hooda, who led India to a gold medal at the South Asian Games last year, has won the prestigious Arjuna Award…</string>
    <string name="kala_ghoda_event">This 9-day festival, celebrated in the beginning of every year, is now synonymous with the city of Mumbai. Celebrating a variety of art forms like music, dance, theatre, drama, art, photography, etc.,</string>
    <string name="khal_ghoda_link"><a href=""> Tap To Know More</a></string>
    <string name="comic_con">Pop culture aficionados have a reason to celebrate every winter now, thanks to this haven that they call home for a full weekend. The very first Comic Con was held in Delhi in 2011 and since then, there’s no looking back.</string>
    <string name="comic_con_link"><a href="">Tap To Know  More</a></string>
    <string name="mumbai_pride_info">All through the month of February, Queer Azadi is organising Pride Month. They\'ve got a line-up of events through February 1st, that continue all through the month. From pride walks to workshops, theatre, parties…</string>
    <string name="mumbai_pride_link"><a href="">Tap To Know More</a></string>
    <string name="spoken_fest_info">For all you budding poets, writers and lovers of spoken word and slam poetry, Spoken Fest 2020 is your call to spend 2 days experiencing the best of this art form. From up and coming</string>
    <string name="spoken_fest_link"><a href="">Tap To Know More</a></string>
    <string name="pet_fed_info">Pet Fed is India\'s largest pet festival that\'s perfect for all you pet lovers. The festival\'s got a stellar line up of fun events from pet fashion shows, stage shows, adoption camps, a police dog show…</string>
    <string name="pet_fed_link"><a href="">Tap To Know More</a></string>
    <string name="techfes_info">For all you techies, tech enthusiasts and those with a curious mind who love all things science and technology, we\'ve got one for you. Now considered to be the largest science and technology festival in Asia…</string>
    <string name="techfest_link"><a href="">Tap To Know More</a></string>
    <string name="secrete_spots">Secrete Spots</string>
    <string name="haunted">Haunted</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_aarey_colony">This luscious green spot in the city also happens to be one of the most notoriously haunted places in Mumbai. By day, it’s a pretty spot to take a walk in. But by night? Well, let’s just say you’d do better to avoid it. For years, people have reported incidents from the Aarey Colony road which connects the Western Express Highway to JVLR. People often see the lone figure of a lady in white following cars…</string>
    <string name="title_aarey_colony">Aarey Milk Colony</string>
    <string name="title_Nasserwanji_Wadi">Nasserwanji Wadi</string>
    <string name="description_Nasserwanji_wadi">Legend has it that this old compound, not far from Mahim Station, was once owned by a Parsi gentleman named Nasserwanji. Brutally murdered (it is said that he was burned alive!) and buried in a well on his own property, rumour has it that the dedicated landlord still looms around the spot of his gruesome death and burial. In fact, nowadays the place is actually considered to be cursed…</string>
    <string name="title_vrindavan_society">Vrindavan Society</string>
    <string name="description_Vrindavan_Society">If there was ever a place in Mumbai that perfectly defined the term ‘oxymoron’, it’s this one. Considered to be one of the most famous and posh societies in the city, Vrindavan Society also holds the dubious honour of being counted amongst the most haunted spots in Mumbai. Night security guards swear by the fact that it’s haunted, some say by the ghost of an old man, who used to live in building 66B and …</string>
    <string name="title_dsouza_chawl">D’Souza Chawl</string>
    <string name="description_dsouza_chawl">D’Souza Chawl can proudly stake claim to being the most haunted house in Mumbai. After all, its creepy and eerie haunting is rooted in the story of an old woman who had died here by falling in a well. The well did not have a boundary wall around it, and so when the woman was getting water from it, she accidentally slipped and fell inside the deep well, dying a tragic death. Since then, it is said that the old woman’s spirit…</string>
    <string name="title_poonam_chambers">Poonam Chambers</string>
    <string name="description_poonam_chambers">Located in Worli, it seems like the Poonam Chambers are possibly the most tragedy-prone place in the city. Especially after the 1993 Mumbai bomb blasts, and the 1997 collapse of the B-wing, one can be forgiven for thinking twice before visiting them. And that’s even before one takes into account all of the strange and paranormal incidents that have been occurring here recently…</string>
    <string name="sion_fort">Sion Fort</string>
    <string name="description_sion_fort">Mumbai, the city that never sleeps is altogether different on early weekend mornings. The whole city takes a short respite from otherwise non-stop bustle of city-life. On one such quaint morning, we went to Sion Fort Nature Walk. The walk, led by biodiversity experts Gauri and Dr. Shreya was a wonderful experience…</string>
    <string name="diamond_garden">Diamond Garden</string>
    <string name="description_diamond_garden">Drawing in morning walkers, senior citizens, outdoor gym aficionados, and dog walkers, Diamond Garden is Chembur’s most famous garden. It boasts of a GNAT MK1 E325 fighter jet flown by two pilots from Mumbai, which was part of the Winged Arrow squadron in the IAF since 1962 and fought Pakistani F100 Super Sabres in the Indo-Pak 1971 war. The plane was returned to the Mayor of Mumbai in 1989 and is now housed in this garden..</string>
    <string name="upvan_lake">Upvan Lake</string>
    <string name="description_upvan_lake">The lake city ‘Thane’ as it is called has many artificial and natural lakes. Of all, 2 famous and most visited lakes are Masunda (Also called ‘Talao Pali’) lake ans Upvan Lake at Pokhran Village near hilly slopes of Yeoor (Park of National Park), Both with attractions and ideal for family and friends.</string>
    <string name="dharavi">Dharavi</string>
    <string name="description_dharavi">Dharavi is a locality in Mumbai, Maharashtra, India, considered to be one of Asia\'s largest slums.Dharavi has an area of just over 2.1 square kilometres (0.81 sq mi; 520 acres)and a population of about 1,000,000. With a population density of over 277,136/km2 (717,780/sq mi), Dharavi is one of the most densely populated areas in the world.</string>
    <string name="chota_khasmir">Chhota Kashmir</string>
    <string name="description_chota_khasmir">Nothing soothes better than a lake, and the same holds quite true for this little place that goes by the name Chhota Kashmir. Placed in one of the busy areas of the city, this place possesses a lake which is very centrally placed and is a complete treat for the eyes owing to its thick green cover and boating facilities.</string>
    <string name="des_aarey_colony">This luscious green spot in the city also happens to be one of the most notoriously haunted places in Mumbai. By day, it’s a pretty spot to take a walk in. But by night? Well, let’s just say you’d do better to avoid it. For years, people have reported incidents from the Aarey Colony road which connects the Western Express Highway to JVLR. People often see the lone figure of a lady in white following cars, while drivers have reported seeing a similar figure following them through their rear view mirrors, and no matter how fast or slow they go, the lady in white always maintains exactly the same distance from them. Others have reported seeing a lady covered in injuries weeping on the side of the road, who runs after their car.</string>
    <string name="des_nasserwanji_wadi">Legend has it that this old compound, not far from Mahim Station, was once owned by a Parsi gentleman named Nasserwanji. Brutally murdered (it is said that he was burned alive!) and buried in a well on his own property, rumour has it that the dedicated landlord still looms around the spot of his gruesome death and burial. In fact, nowadays the place is actually considered to be cursed, what with more than seven people having died here under mysterious circumstances since Nasserwanji’s own death. There have also been cases of people trying to trespass and enter this property, only to feel a strange, eerie and stinging sensation on their faces. Those brave enough to venture here should be careful.</string>
    <string name="bandra">Bandra</string>
    <string name="bandra_is_often_called_nthe_queen_of_suburbs_nand_with_good_reason">Bandra is often called\nthe “Queen of Suburbs”\nand with good reason</string>
    <string name="chembur">Chembur</string>
    <string name="chembur_des">Chembur is the hub of\nall the locations as it\nis centrally located\nand the connectivity it\nhas makes prominent\nArea amongst all \nother location</string>
    <string name="cst">Chhatrapati\nShivaji\nTerminus</string>
    <string name="hot_places">Places</string>
    <string name="hot_food">Food</string>
    <string name="hot_shopping">Shopping</string>
    <string name="cst_des">C.S.T area is\nfull of tourist spots</string>
    <string name="click">Click To Know More…</string>
    <string name="address">Address:</string>
    <string name="bandstand_address">Bandstand Road,\nBandra West,\nMumbai 400050.</string>
    <string name="bandstand_des">Bandra Bandstand or Bandstand Promenade is the popular promenade in the queen suburbs of Bandra in Mumbai. It boasts of a joggers’ strip and a park making it quite a popular hangout spot. Dotted with food junctions and sprinkled with hawkers selling street snacks, the promenade is replete with swarms of people at all points of the day. Besides presenting an enthralling picture of the adjacent sea and the mesmerising skyline, Bandstand also boasts of being Shahrukh Khan’s residential place, which is a major pull for the tourists.Towards the end of the promenade is the amphitheatre, which is used to host various cultural events and concerts. Not far away is located the Bandra Fort and Bandra Sea Link, are also popular tourist attractions.</string>
</resources>