<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HotPlacesView">

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/tab_layout_hot_places_view"
        android:background="#b388ff"
        android:layout_height="wrap_content"
        app:tabSelectedTextColor="@color/cardview_light_background"
        app:tabIconTint="@color/design_default_color_on_secondary"
        app:tabIndicatorColor="@color/design_default_color_background"

        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_streetview_24"
            android:text="@string/hot_places" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/food"
            android:text="@string/hot_food" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:text="@string/hot_shopping" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager2_hotPlacesView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>