<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgsec"
    tools:context=".HotSpots">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C0000000"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:id="@+id/view_one_bandra"
        android:onClick="bandra">
    <ImageView
        android:id="@+id/bandra_image"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="150dp"
        android:src="@drawable/bandra"
        android:scaleType="centerInside"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <TextView
        android:id="@+id/bandra_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bandra"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="7dp"
        android:textSize="24sp"
        android:textColor="#ffffff"/>
    <View
        android:layout_width="130dp"
        android:id="@+id/line_view"
        android:layout_marginLeft="5dp"
        android:layout_height="3dp"
        android:layout_below="@id/bandra_title_text"
        android:background="#70807D81" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        android:textColor="#CAC8C8"
        android:text="@string/bandra_is_often_called_nthe_queen_of_suburbs_nand_with_good_reason"
        android:layout_below="@id/line_view"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:layout_marginTop="70dp"
            android:textSize="13sp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_marginLeft="8dp"
            android:textColor="#9F03DAC5"
            android:layout_below="@id/line_view"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/view_one_bandra"
        android:id="@+id/view_two_chembur"
        android:onClick="chembur">
        <ImageView
            android:id="@+id/chumbur_image"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="150dp"
            android:src="@drawable/chembur"
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/chembur_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chembur"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="7dp"
            android:textSize="24sp"
            android:textColor="#ffffff"/>
        <View
            android:layout_width="130dp"
            android:id="@+id/line_view_2"
            android:layout_marginLeft="5dp"
            android:layout_height="3dp"
            android:layout_below="@id/chembur_title_text"
            android:background="#70807D81" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="#CAC8C8"
            android:text="@string/chembur_des"
            android:layout_below="@id/line_view_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="8dp"
            android:textSize="13sp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="#9F03DAC5"
            android:layout_below="@id/line_view_2"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/view_two_chembur"
        android:id="@+id/view_three_churchgate"
        android:onClick="cst">
        <ImageView
            android:id="@+id/churchgate_image"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="150dp"
            android:src="@drawable/churgate"
            android:scaleType="fitCenter"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/churchgate_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cst"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="7dp"
            android:textSize="24sp"
            android:textColor="#ffffff"/>
        <View
            android:layout_width="130dp"
            android:id="@+id/line_view_3"
            android:layout_marginLeft="5dp"
            android:layout_height="3dp"
            android:layout_below="@id/churchgate_title_text"
            android:background="#70807D81" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="4dp"
            android:textSize="14sp"
            android:textColor="#CAC8C8"
            android:text="@string/cst_des"
            android:layout_below="@id/line_view_3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="8dp"
            android:textColor="#9F03DAC5"
            android:textSize="13sp"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_below="@id/line_view_3"/>
    </RelativeLayout>
</RelativeLayout>